[metadata]
name = avilabsutils-distml
version = 0.0.1
author = Avilay Parekh
author_email = avilay@gmail.com
description = A bunch of convenience color print functions.
url = https://github.com/avilay/utils/cprint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = distml
python_requires = >=3.6
install_requires =
    avilabsutils-cprint
    torch
